fixed whitespace issue

--- a/public/index.css
+++ b/public/index.css
@@ -595,7 +595,7 @@ img {
 
 .contact__form label {
   position: absolute;
-  left: 9999px;
+  left: -9999px;
 }
 
 .contact__form input {
